# plane-to-jira

./: .env.example  .gitignore  README.md  pyproject.toml
plane_to_jira/: cli.py  converter.py  jira_client.py  migrate.py  plane_client.py
